<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="telmoapp.com.telmoapp.IndexActivityFragment"
    android:background="#4f4c4c">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_gravity="center"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/tittle_app"
            android:textAppearance="@style/AppTheme"
            android:textSize='60sp'
            android:layout_marginLeft="25sp"
            android:textColor="@color/theme_primary"
            android:paddingTop="30px"
            android:layout_weight="0.55" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

       <Button
           android:id="@+id/btn_lista"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:text="@string/btn_1"
           android:layout_marginTop="5dp"
           android:textColor="@color/theme_components"
           android:background="@drawable/button"
           android:layout_marginLeft="10dp"
           android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_cercanos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_2"
            android:layout_marginTop="5dp"
            android:textColor="@color/theme_components"
            android:background="@drawable/button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_recomendados"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_3"
            android:layout_marginTop="5dp"
            android:textColor="@color/theme_components"
            android:background="@drawable/button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_sshop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_4"
            android:layout_marginTop="5dp"
            android:textColor="@color/theme_components"
            android:background="@drawable/button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_recomendaciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btn_5"
            android:layout_marginTop="5dp"
            android:textColor="@color/theme_components"
            android:background="@drawable/button"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/subtittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/subtittle"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="10dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/webpage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="@string/web_page"
                android:layout_gravity="center_vertical"
                android:autoLink="all"
                android:clickable="true"
                android:layout_marginLeft="100dp" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
